--- a/imports/client/styles/_main.scss
+++ b/imports/client/styles/_main.scss
@@ -6,8 +6,10 @@ html{
     font-size:62.5%;
 }
 body{
+    background:#f2f2f2;
     color:#555;
     font-family:Helvetica, Arial, sans-serif;
+    font-size: 1.6rem;
 }
 
     h1{
@@ -20,3 +22,5 @@ body{
 
 @import './components/titleBar';
 @import './components/wrapper';
+@import './components/item';
+@import './components/button';
