--- a/imports/client/styles/_main.scss
+++ b/imports/client/styles/_main.scss
@@ -17,10 +17,14 @@ body{
         font-size: 2.4rem;
     }
 
-
+input, button, select {
+    font-size: 1.3rem;
+}
 
 
 @import './components/titleBar';
 @import './components/wrapper';
 @import './components/item';
 @import './components/button';
+@import './components/player';
+@import './components/form';
