--- a/imports/client/styles/components/_button.scss
+++ b/imports/client/styles/components/_button.scss
@@ -6,6 +6,7 @@ cursor: pointer;
 font-weight: 600;
 margin-left: 1.3rem;
 outline: none;
+line-height: 1;
 padding:1.3rem;
 transition: background .2s ease, transform .2s ease;
 
